fixed css for overflow issues

--- a/styles/main.css
+++ b/styles/main.css
@@ -66,11 +66,6 @@ a:hover {
   text-decoration: underline;
 }
 
-img {
-  max-width: 100%;
-  height: auto;
-}
-
 .page-image {
   display: flex;
   margin: 0 auto;
@@ -82,8 +77,11 @@ img {
   display: flex;
   padding: 15px 0px 0px 0px;
   margin: 0 auto;
-  border-radius: 5px;
-  max-width: 75%;
+  border-radius: 10px;
+  width: 75%;
+  max-height: 250px;
+  object-fit: cover;
+  object-position: top;
 }
 
 .header {
@@ -204,6 +202,16 @@ img {
 }
 
 .box-small p {
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 5;
+  max-height: 110px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.box-big p {
+  font-size: 20px;
   display: -webkit-box;
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 5;
